--- a/templates/accounts/registerVendor.html
+++ b/templates/accounts/registerVendor.html
@@ -27,7 +27,8 @@
                 <form
                   class="form-fields-set foodbakery-dev-restaurant-form"
                   method="post"
-                  action={% url 'registerUser' %}
+                  action={% url 'registerVendor' %}
+                  enctype="multipart/form-data"
                 >
                 {% csrf_token %}
                   <ul
@@ -50,6 +51,20 @@
                                 >
                                   <div class="field-holder">
                                     <label>Last name</label/>{{form.last_name}}
+                                  </div>
+                                </div>
+                                <div
+                                  class="col-lg-6 col-md-6 col-sm-6 col-xs-12"
+                                >
+                                  <div class="field-holder">
+                                    <labe>Restaurant name</label>{{v_form.vendor_name}}
+                                  </div>
+                                </div>
+                                   <div
+                                  class="col-lg-6 col-md-6 col-sm-6 col-xs-12"
+                                >
+                                  <div class="field-holder">
+                                    <labe>Restaurant Licence</label>{{v_form.vendor_licence}}
                                   </div>
                                 </div>
                                 {% comment %} <div
@@ -78,13 +93,6 @@
                                 >
                                   <div class="field-holder">
                                     <label>Username</label>{{form.username}}
-                                  </div>
-                                </div>
-                                     <div
-                                  class="col-lg-6 col-md-6 col-sm-6 col-xs-12"
-                                >
-                                  <div class="field-holder">
-                                    <label>Username</label>{{v_form.vendor_name}}
                                   </div>
                                 </div>
                               </li>
