--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -94,7 +94,7 @@
             >
             
             
-            <a class="get-start-btn" href="register-restaurant.html">
+            <a class="get-start-btn" href="{% url 'registerVendor' %}">
               Register Restaurant
             </a>
           </div>
