--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,4 @@
-
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,22 +8,43 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>FoodOnline</title>
 	<!-- Google Font Family Link Start -->
-	<link rel="stylesheet" type="text/css"  href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800">
 	<!-- Google Font Family Link End -->
 
 	<!-- CSS -->
-	<link href="{% static  "css/iconmoon.css" %}" rel="stylesheet">
-	<link href="{% static  "css/style.css" %}" rel="stylesheet">
-	<link href="{% static  "css/cs-foodbakery-plugin.css" %}" rel="stylesheet">
+	<link href="{% static 'css/iconmoon.css' %}" rel="stylesheet">
+	<link href="{% static 'css/style.css' %}" rel="stylesheet">
+	<link href="{% static 'css/cs-foodbakery-plugin.css' %}" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-	<link href="{% static  "css/bootstrap-slider.css" %}" rel="stylesheet">
-	<link href="{% static  "css/custom.css" %}" rel="stylesheet">
+	<link href="{% static 'css/bootstrap-slider.css' %}" rel="stylesheet">
+	
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	
 	<!-- JAVASCRIPT -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" ></script>
-	<script src="{% static  "js/modernizr.js" %}"></script>
-	<script src="{% static  "js/bootstrap.js" %}"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="{% static 'js/modernizr.js' %}"></script>
+	<script src="{% static 'js/bootstrap.js' %}"></script>
+
+	<link rel="stylesheet" href="{% static 'css/custom.css' %}">
+
+	{% if '/' == request.path or 'profile' in request.path %}
+	<script src="https://maps.googleapis.com/maps/api/js?key={{GOOGLE_API_KEY}}&libraries=places&callback=initAutoComplete" defer></script>
+	{% endif %}
+	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+	<script src="{% static 'js/custom.js' %}"></script>
+	
+	<!-- Include the PayPal JavaScript SDK -->
+    <script src="https://www.paypal.com/sdk/js?client-id={{ PAYPAL_CLIENT_ID }}&currency=USD"></script>
+
+	<!-- Include Datatables plugin script and css -->
+	<link rel="stylesheet" href="//cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css">
+	<script src="//cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+	<script>
+		$(document).ready( function () {
+			$('#myOrdersTable').DataTable();
+		} );
+	</script>
 
 	<style>
 		body, .main-section p, .mce-content-body p{
@@ -35,12 +54,17 @@
 </head>
 
 <body>
-	     
-	{% include 'includes/navbar.html' %}
 
-	{% block content %}
+    <!-- LOAD NAVBAR HERE -->
+    {% include 'includes/navbar.html' %}
 
-	{% endblock %}
+    <!-- LOAD CONTENT HERE -->
+    {% block content %}
+        <!-- CONTENT GOES HERE -->
+    {% endblock %}
 
-	{% include 'includes/footer.html' %}
+    <!-- LOAD FOOTER HERE -->
+    {% include 'includes/footer.html' %}
+
+
 	
